--- a/res/lang/ca.json
+++ b/res/lang/ca.json
@@ -27,7 +27,7 @@
     "MSG_TOOLS1_SRAM": "Test memòria SRAM",
     "MSG_TOOLS2_BAT": "Test bateria SRAM",
     "MSG_TOOLS3_BENCH": "Benchmark SD (lect.)",
-    "MSG_TOOLS4_FBAK": "Backup flash",
+    "MSG_TOOLS4_FBAK": "Còpia seg. flash",
     "MSG_TOOLS_RUN": "Executar",
     "MSG_DEFS_PATCH": "Patching",
     "MSG_UIS_THEME": "Color del tema",
@@ -57,17 +57,17 @@
     "MSG_PATCH_TYPE_I2": "No es fa servir patching (funciona bé amb la majoria de Homebrew)",
     "MSG_BOOT_TYPE_I0": "Salta l'arrencada de la BIOS i la seva pantalla d'inici (inicia directament el joc)",
     "MSG_BOOT_TYPE_I1": "Arrenca el joc des de la BIOS (fa un reset complet)",
-    "MSG_SAVE_TYPE_I0": "Desa la vida del fitxer a /SAVEGAME/ dir",
-    "MSG_SAVE_TYPE_I1": "Desa els fitxers a /SAVES/ dir",
-    "MSG_SAVE_TYPE_I2": ".sav al mateix directori que la ROM",
+    "MSG_SAVE_TYPE_I0": "El fitxer de partida (savegame) es guarda al directori /SAVEGAME/",
+    "MSG_SAVE_TYPE_I1": "El fitxer de partida (savegame) es guarda al directori /SAVES/",
+    "MSG_SAVE_TYPE_I2": "Guarda el .sav al mateix directori que la ROM",
     "MSG_BACKUP_I": "Conserva les últimes N partides guardades",
-    "MSG_INGAME_I": "Mostra el menú en prémer la tecla combinada",
+    "MSG_INGAME_I": "Mostra el menú en prémer la combinació de botons",
     "MSG_LOADER_SAVET": "Mode guardat",
     "MSG_LOADER_ST0": "< Guardat-Directe >",
     "MSG_LOADER_ST1": "< SRAM >",
     "MSG_LOADER_LOADP": "Càrrega partida",
     "MSG_LOADER_SAVEP": "Guardat partida",
-    "MSG_LOADER_LOADP0": "< Carregar >",
+    "MSG_LOADER_LOADP0": "< Carrega >",
     "MSG_LOADER_LOADP1": "< Esborra >",
     "MSG_LOADER_LOADP2": "< Manual >",
     "MSG_LOADER_SAVEP0": "< En reiniciar >",
@@ -78,7 +78,7 @@
     "MSG_LOADER_LOADP_I0": "Carrega automàticament la partida de l'arxiu .sav",
     "MSG_LOADER_LOADP_I1": "Esborra la partida (comença una nova partida)",
     "MSG_LOADER_LOADP_I2": "No es carrega cap partida .sav automàticament",
-    "MSG_LOADER_SAVEP_I0": "Desa el joc en reiniciar",
+    "MSG_LOADER_SAVEP_I0": "Guarda la partida en reiniciar (durant l'arrencada)",
     "MSG_LOADER_SAVEP_I1": "No es guardarà la partida a l'arxiu .sav automàticament",
     "MSG_LOADER_SAVEP_I2": "El Guardat-Directe actualitzarà automàticament l'arxiu .sav",
     "MSG_LOADER_ST_I0": "La partida es guarda automàticament a la targeta SD mentre s'està jugant",
@@ -87,28 +87,28 @@
     "MSG_DEF_LOADP1": "< Manual >",
     "MSG_DEF_SAVEP0": "< Automàtic >",
     "MSG_DEF_SAVEP1": "< Manual >",
-    "MSG_DEF_LOADP_I0": "Intenta carregar el fitxer .sav si es troba",
+    "MSG_DEF_LOADP_I0": "Intenta carregar l'arxiu de partida .sav si existeix",
     "MSG_DEF_LOADP_I1": "No es carrega la partida automàticament",
     "MSG_DEF_SAVEP_I0": "Guarda la partida a l'arxiu .sav (en reiniciar o directament)",
     "MSG_DEF_SAVEP_I1": "No guarda la partida de forma automàtica",
-    "MSG_LOADER_MENU": "Menú del joc",
+    "MSG_LOADER_MENU": "Menú de joc",
     "MSG_LOAD_GBA": "Carrega el ROM de GBA",
     "MSG_LOADINFO_GAME": "ID del joc: %s | Versió: %d",
     "MSG_LOADINFO_SAVE": "Tipus de guardat: %s (%s)",
     "MSG_LOADINFO_UNKW": "Joc desconegut!",
     "MSG_ERR_GENERIC": "S'ha produït un error!",
-    "MSG_ERR_SETSAVE": "S'ha produït un error en desar la configuració!",
-    "MSG_ERR_DELFILE": "S'ha produït un error en suprimir el fitxer!",
+    "MSG_ERR_SETSAVE": "Error en guardar la config.!",
+    "MSG_ERR_DELFILE": "Error eliminant l'arxiu!",
     "MSG_OK_SETSAVE": "La configuració s'ha guardat!",
     "MSG_OK_DELFILE": "Arxiu eliminat!",
-    "MSG_SAVOPT_OPT0": "Escriu SRAM per guardar",
-    "MSG_SAVOPT_OPT1": "Carrega desat a SRAM",
-    "MSG_SAVOPT_OPT2": "Esborra/Esborra el desat",
+    "MSG_SAVOPT_OPT0": "Guarda SRAM a l'arxiu",
+    "MSG_SAVOPT_OPT1": "Carrega arxiu .sav a la SRAM",
+    "MSG_SAVOPT_OPT2": "Esborra l'arxiu .sav",
     "MSG_SAVOPT_MSG0": "SRAM guardada a l'arxiu sav!",
-    "MSG_SAVOPT_MSG1": ".sav s'ha carregat a SRAM!",
-    "MSG_SAVOPT_MSG2": ".sav s'ha esborrat!",
-    "MSG_SAVOPT_MSG_RERR": "No s'ha pogut llegir el fitxer sav!",
-    "MSG_SAVOPT_MSG_WERR": "No s'ha pogut escriure el fitxer sav!",
+    "MSG_SAVOPT_MSG1": "El .sav s'ha carregat a SRAM!",
+    "MSG_SAVOPT_MSG2": "S'ha esborrat l'arxiu .sav!",
+    "MSG_SAVOPT_MSG_RERR": "Error de lectura del .sav!",
+    "MSG_SAVOPT_MSG_WERR": "Error d'escriptura del .sav!",
     "MSG_FWUP_HOTKEY": "Prem ⯆+B+Start per permetre actualitzacions",
     "MSG_FWUP_ENABLED": "Les actualitzacions estan permeses",
     "MSG_FWUP_DISABLED": "Actualitzacions desactivades!",
@@ -122,19 +122,19 @@
     "MSG_FWUPD_DONE": "Actualització flash completa!",
     "MSG_FLASH_READOK": "Bolcat de flash completat!",
     "MSG_FWUPD_BADCHK": "Checksum de l'arxiu incorrecte!",
-    "MSG_FWUP_BADHD": "Capçalera FW dolenta!",
-    "MSG_FWUP_ERRSZ": "Mida d'actualització no vàlida!",
-    "MSG_FWUP_ERRRD": "No es pot llegir el fitxer!",
-    "MSG_FWUP_ERRCL": "Error d'esborrar!",
+    "MSG_FWUP_BADHD": "Capçalera FW invàlida!",
+    "MSG_FWUP_ERRSZ": "Arxiu d'actualització invàlid!",
+    "MSG_FWUP_ERRRD": "No es pot llegir l'arxiu!",
+    "MSG_FWUP_ERRCL": "Error d'esborrat!",
     "MSG_FWUP_ERRPG": "Error d'escriptura!",
     "MSG_FWUP_ERRVR": "La verificació ha fallat!",
-    "MSG_ERR_READ": "Error: no s'ha pogut carregar el ROM!",
-    "MSG_ERR_TOOBIG": "El fitxer GBA és massa gran!",
-    "MSG_ERR_SAVERD": "Error llegint la partida guardada",
-    "MSG_ERR_SAVEWR": "Error escrivint la partida guardada",
-    "MSG_ERR_SAVEPR": "Error preparant l'arxiu de partida",
-    "MSG_ERR_SAVEIT": "Error: error intern desconegut",
-    "MSG_BAD_SDRAM": "Error SDRAM (emmagatzematge ROM)!",
+    "MSG_ERR_READ": "Error carregant el ROM!",
+    "MSG_ERR_TOOBIG": "L'arxiu GBA és massa gran!",
+    "MSG_ERR_SAVERD": "Error de lectura (partida .sav)",
+    "MSG_ERR_SAVEWR": "Error de guardat (partida .sav)",
+    "MSG_ERR_SAVEPR": "Error preparant l'arxiu .sav",
+    "MSG_ERR_SAVEIT": "Error intern desconegut",
+    "MSG_BAD_SDRAM": "Error SDRAM (memòria ROM)!",
     "MSG_BAD_SRAM": "Error de test de SRAM!",
     "MSG_GOOD_RAM": "Test de memòria superat!",
     "IMENU_QC0_NO": "No",
@@ -142,7 +142,7 @@
     "IMENU_MAIN0_BACK_GAME": "Torna al joc",
     "IMENU_MAIN1_RESET": "Reinici",
     "IMENU_MAIN2_FLUSH_SAVE": "Guardar partida a la SD",
-    "IMENU_MAIN3_SSTATE": "Savestates",
+    "IMENU_MAIN3_SSTATE": "Instantànies",
     "IMENU_MAIN4_RTC": "Rellotge RTC",
     "IMENU_MAIN5_CHEATS": "Trucs",
     "IMENU_GOBACK": "Enrere",
@@ -151,26 +151,26 @@
     "IMENU_RST2_DEVSKIP": "Torna al menú (sense guardar)",
     "IMENU_SAVE0_OW": "Guarda a la SD (sobreescriu)",
     "IMENU_SAVE1_BKP": "Guarda (amb còpia de seguretat)",
-    "IMENU_SSTATEQ0_SAVE": "Desa ràpid",
-    "IMENU_SSTATEQ1_LOAD": "Càrrega ràpida",
+    "IMENU_SSTATEQ0_SAVE": "Crea instantània ràpida",
+    "IMENU_SSTATEQ1_LOAD": "Càrrega instantània",
     "IMENU_SSTATEQ2_WRITE": "Fer persistent",
-    "IMENU_SSTATEP0_SAVE": "Desa l'estat",
-    "IMENU_SSTATEP1_LOAD": "Estat de càrrega",
-    "IMENU_SSTATEP2_DEL": "Suprimeix",
+    "IMENU_SSTATEP0_SAVE": "Crea instantània",
+    "IMENU_SSTATEP1_LOAD": "Carrega instantània",
+    "IMENU_SSTATEP2_DEL": "Elimina",
     "IMENU_SSTATE_PN": "Slot persistent %d",
     "IMENU_SSTATE_QN": "Slot de memòria %d",
-    "IMENU_MSG_SAVEC": "Desa completat",
+    "IMENU_MSG_SAVEC": "Guardat completat",
     "IMENU_MSG_SAVEERR": "S'ha produït un error de guardat!",
     "IMENU_MSG_RTCWR": "La data/hora RTC s'ha actualitzat",
-    "IMENU_ST_OVER": "Sobreescriure l'estat de desat?",
-    "IMENU_ST_DEL": "Vols suprimir l'estat de desat?",
-    "IMENU_QLD_OK": "S'ha carregat l'estat desat!",
-    "IMENU_QLD_ERR": "Estat desat no vàlid!",
-    "IMENU_WSAV_OK": "S'ha creat l'estat desat!",
-    "IMENU_WSTAF_OK": "Savestate guardat correctament!",
+    "IMENU_ST_OVER": "Sobreescriure la instantània?",
+    "IMENU_ST_DEL": "Vols suprimir la instantània?",
+    "IMENU_QLD_OK": "Instantània carregada!",
+    "IMENU_QLD_ERR": "Instantània invàlida!",
+    "IMENU_WSAV_OK": "S'ha creat la instantània",
+    "IMENU_WSTAF_OK": "Instantània creada correctament!",
     "IMENU_WSTAF_ERR": "Error mentre escrivia l'arxiu!",
     "IMENU_WSTAR_ERR": "Error de lectura de l'arxiu!",
-    "IMENU_PLD_ERR": "Estat desat corrupte!",
+    "IMENU_PLD_ERR": "Instantània invàlida!",
     "MSG_LANG_NAME": "Català",
     "MSG_Q1_NOPATCH": "No s'han trobat patches per a aquest ROM, vols generar-los?",
     "MSG_Q1_PATCHENG": "PatchEngine no ha processat aquest ROM, vols generar patches ara?",
@@ -191,8 +191,8 @@
     "MSG_LOADER_PTCH": "PatchEngine",
     "MSG_DEF_RTCVAL": "Data/hora RTC",
     "MSG_OK_GENERIC": "S'ha completat correctament!",
-    "MSG_ERR_NOEMU": "No s'ha trobat emulador!",
-    "MSG_ERR_UNKTYP": "Tipus de fitxer desconegut!",
+    "MSG_ERR_NOEMU": "No s'ha trobat l'emulador!",
+    "MSG_ERR_UNKTYP": "Tipus d'arxiu desconegut!",
     "MSG_BENCHSPD": "Velocitat: %u KiB/s",
     "MSG_CAPACITY": "Capacitat: %s",
     "MSG_DBPINFO": "Informació de la BD de patches",
