Adding CS language, update translations
Add a flag to ship GBC emulator or not. Lite firmware is too big (flash
is limited to 496KiB instead of 512KiB)

--- a/res/lang/ru.json
+++ b/res/lang/ru.json
@@ -203,6 +203,6 @@
     "IMENU_SAVING_BLOCKED": "Происходит сохранение!",
     "MSG_SETT_FASTSD": "Быстр. загрузка",
     "MSG_FASTSD_I": "Используется механизм быстрой загрузки, может привести к ошибкам или некорректному чтению",
-    "MSG_SETT_FASTEW": "EWRAM overclock",
-    "MSG_FASTEW_I": "Overclock EWRAM for some extra performance. Not available on NDS or GBA Micro"
+    "MSG_SETT_FASTEW": "Разгон EWRAM",
+    "MSG_FASTEW_I": "Разгон EWRAM для увеличения производительности. Не доступно для NDS и GB Micro"
 }
