--- a/res/lang/de.json
+++ b/res/lang/de.json
@@ -203,6 +203,6 @@
     "IMENU_SAVING_BLOCKED": "Speichern läuft!",
     "MSG_SETT_FASTSD": "ROM schnell laden",
     "MSG_FASTSD_I": "Benutzt einen Mechanismus, um Spiele schnell zu laden. Kann bei einigen Geräten zu einem Crash oder Spielkorruption führen",
-    "MSG_SETT_FASTEW": "EWRAM overclock",
-    "MSG_FASTEW_I": "Overclock EWRAM for some extra performance. Not available on NDS or GBA Micro"
+    "MSG_SETT_FASTEW": "EWRAM Übertakten",
+    "MSG_FASTEW_I": "Übertakten Sie EWRAM für zusätzliche Leistung. Nicht verfügbar für NDS oder GBA Micro"
 }
