--- a/res/lang/uk.json
+++ b/res/lang/uk.json
@@ -203,6 +203,6 @@
     "IMENU_SAVING_BLOCKED": "Відбувається збереження!",
     "MSG_SETT_FASTSD": "Шв. завант.",
     "MSG_FASTSD_I": "Використовується механізм швидкого завантаження, може спричинити помилки або некоректне зчитування",
-    "MSG_SETT_FASTEW": "EWRAM overclock",
-    "MSG_FASTEW_I": "Overclock EWRAM for some extra performance. Not available on NDS or GBA Micro"
+    "MSG_SETT_FASTEW": "Розгін EWRAM",
+    "MSG_FASTEW_I": "Розгін EWRAM для збільшення продуктивності. Не доступно для NDS та GB Micro"
 }
