--- a/res/lang/cs.json
+++ b/res/lang/cs.json
@@ -17,11 +17,11 @@
     "MSG_SAVETYPE_FLASH": "Flash",
     "MSG_SET_TITL1": "Globální nastavení",
     "MSG_SET_TITL2": "Výchozí nastavení GBA",
-    "MSG_SETT_HOTK": "Tlačítková zkratka pro menu",
+    "MSG_SETT_HOTK": "Menu Hot-key",
     "MSG_SETT_BOOT": "Při bootování",
-    "MSG_SETT_SAVET": "Cesta k souborům uložených pozic",
-    "MSG_SETT_SAVEBK": "Záloha uložených pozic #",
-    "MSG_SETT_STATET": "Cesta k savestateům",
+    "MSG_SETT_SAVET": "Složka se .sav",
+    "MSG_SETT_SAVEBK": "Zálohy .sav #",
+    "MSG_SETT_STATET": "Složka savestatů",
     "MSG_SETT_CHTEN": "Zapnout cheaty",
     "MSG_TOOLS0_SDRAM": "Test SDRAM",
     "MSG_TOOLS1_SRAM": "Test SRAM",
@@ -32,7 +32,7 @@
     "MSG_DEFS_PATCH": "Patche",
     "MSG_UIS_THEME": "Barva motivu",
     "MSG_UIS_LANG": "Jazyk",
-    "MSG_UIS_RECNT": "Naposledy hrané ROM",
+    "MSG_UIS_RECNT": "Poslední ROM",
     "MSG_UIS_ANSPD": "Rychlost textu",
     "MSG_UIS_SAVE": "Uložit na SD",
     "MSG_UIS_SPD0": "< Velmi pomalá >",
@@ -76,7 +76,7 @@
     "MSG_LOADER_PREFDS": "Direct-Save",
     "MSG_LOADER_PREFDSI": "Uloží hru rovnou na SD kartu (nefunguje u všech her)",
     "MSG_LOADER_LOADP_I0": "Automaticky načte .sav soubor",
-    "MSG_LOADER_LOADP_I1": "Resetuje save (Začnete znovu)",
+    "MSG_LOADER_LOADP_I1": "Resetuje save (Vytvoří .sav)",
     "MSG_LOADER_LOADP_I2": ".sav soubor nebude automaticky načten",
     "MSG_LOADER_SAVEP_I0": "Uloží hru po restartu",
     "MSG_LOADER_SAVEP_I1": "Žádné automatické ukládání do .sav souboru",
@@ -119,7 +119,7 @@
     "MSG_FWUPD_CHECKING": "Kontroluji obraz...",
     "MSG_FWUPD_ERASING": "Mažu FLASH...",
     "MSG_FWUPD_PROGRAM": "Programuji firmware...",
-    "MSG_FWUPD_DONE": "Aktualizace FLASH byla dokončena!",
+    "MSG_FWUPD_DONE": "Aktualizace FLASH hotová!",
     "MSG_FLASH_READOK": "Kopírování FLASH hotovo!",
     "MSG_FWUPD_BADCHK": "Chybný checksum firmwaru!",
     "MSG_FWUP_BADHD": "Špatný header firmwaru!",
@@ -136,7 +136,7 @@
     "MSG_ERR_SAVEIT": "Chyba: Neznámá chyba!",
     "MSG_BAD_SDRAM": "SDRAM (Úložiště ROM) Chyba!",
     "MSG_BAD_SRAM": "Vyskytla se chyba testu SRAM!",
-    "MSG_GOOD_RAM": "Speichertest bestanden!",
+    "MSG_GOOD_RAM": "SRAM test úspěšný!",
     "IMENU_QC0_NO": "Ne",
     "IMENU_QC1_YES": "Ano",
     "IMENU_MAIN0_BACK_GAME": "Zpět do hry",
@@ -145,14 +145,14 @@
     "IMENU_MAIN3_SSTATE": "Savestaty",
     "IMENU_MAIN4_RTC": "Hodiny (RTC)",
     "IMENU_MAIN5_CHEATS": "Cheaty",
-    "IMENU_GOBACK": "Zpět do hry",
+    "IMENU_GOBACK": "Zpět",
     "IMENU_UPDAT_RTC": "Aktualizovat hodiny (RTC)",
     "IMENU_RST0_GAME": "Resetovat hru",
     "IMENU_RST2_DEVSKIP": "Zpět do menu (neukládat)",
     "IMENU_SAVE0_OW": "Uložit na SD (přepsat)",
     "IMENU_SAVE1_BKP": "Uložit na SD (se zálohou)",
-    "IMENU_SSTATEQ0_SAVE": "Quicksave",
-    "IMENU_SSTATEQ1_LOAD": "Quickload",
+    "IMENU_SSTATEQ0_SAVE": "Vytvořit Quicksave",
+    "IMENU_SSTATEQ1_LOAD": "Vytvořit Quickload",
     "IMENU_SSTATEQ2_WRITE": "Zapsat na SD kartu",
     "IMENU_SSTATEP0_SAVE": "Savestate",
     "IMENU_SSTATEP1_LOAD": "Načíst Savestate",
@@ -180,7 +180,7 @@
     "MSG_Q3_LOADPDB": "Chcete načíst a nahradit svoji databázi patchů?",
     "MSG_Q4_DELREC": "Vymazat naposledy hranou hru? (Tato operace nesmaže ROM!)",
     "MSG_GBALOAD_MSETT": "Nastavení hry",
-    "MSG_SETT_REMEMB": "Zapamatovat nastavení",
+    "MSG_SETT_REMEMB": "Uložit nastavení",
     "MSG_SETT_LDCHT": "Načíst cheaty",
     "MSG_PATCHE_I": "Spustit PatchEngine a vytvořit patche pro tuto ROM",
     "MSG_PATCHRTC_I": "Emulovat hodiny (RTC) (funguje pouze u podporovaných her). Stiskněte A pro nastavení času a data.",
